logs/json_etl_dag/create_temp_tables/2021-09-07T054527.980388+0000/1.log
[2021-09-07 05:45:35,174] {taskinstance.py:903} INFO - Dependencies all met for <TaskInstance: json_etl_dag.create_temp_tables 2021-09-07T05:45:27.980388+00:00 [queued]>
[2021-09-07 05:45:35,183] {taskinstance.py:903} INFO - Dependencies all met for <TaskInstance: json_etl_dag.create_temp_tables 2021-09-07T05:45:27.980388+00:00 [queued]>
[2021-09-07 05:45:35,183] {taskinstance.py:1094} INFO - 
--------------------------------------------------------------------------------
[2021-09-07 05:45:35,183] {taskinstance.py:1095} INFO - Starting attempt 1 of 1
[2021-09-07 05:45:35,183] {taskinstance.py:1096} INFO - 
--------------------------------------------------------------------------------
[2021-09-07 05:45:35,194] {taskinstance.py:1114} INFO - Executing <Task(PostgresOperator): create_temp_tables> on 2021-09-07T05:45:27.980388+00:00
[2021-09-07 05:45:35,197] {standard_task_runner.py:52} INFO - Started process 28731 to run task
[2021-09-07 05:45:35,199] {standard_task_runner.py:76} INFO - Running: ['***', 'tasks', 'run', 'json_etl_dag', 'create_temp_tables', '2021-09-07T05:45:27.980388+00:00', '--job-id', '211', '--pool', 'default_pool', '--raw', '--subdir', 'DAGS_FOLDER/etl.py', '--cfg-path', '/tmp/tmplq553dv7', '--error-file', '/tmp/tmp_loy8zht']
[2021-09-07 05:45:35,199] {standard_task_runner.py:77} INFO - Job 211: Subtask create_temp_tables
[2021-09-07 05:45:35,231] {logging_mixin.py:109} INFO - Running <TaskInstance: json_etl_dag.create_temp_tables 2021-09-07T05:45:27.980388+00:00 [running]> on host 731700afc5ff
[2021-09-07 05:45:35,269] {taskinstance.py:1251} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=json_etl_dag
AIRFLOW_CTX_TASK_ID=create_temp_tables
AIRFLOW_CTX_EXECUTION_DATE=2021-09-07T05:45:27.980388+00:00
AIRFLOW_CTX_DAG_RUN_ID=manual__2021-09-07T05:45:27.980388+00:00
[2021-09-07 05:45:35,270] {postgres.py:68} INFO - Executing: 
            INSERT INTO users SELECT * FROM users_temp a WHERE NOT EXISTS (SELECT * FROM users b where a.id = b.id)
            INSERT INTO posts SELECT * FROM posts_temp a WHERE NOT EXISTS (SELECT * FROM posts b where a.id = b.id)
            DROP TABLE IF EXISTS users_temp;
            DROP TABLE IF EXISTS posts_temp;
        
[2021-09-07 05:45:35,276] {base.py:70} INFO - Using connection to: id: nickel-aws. Host: nickel.caybmxchvlv1.us-east-1.rds.amazonaws.com, Port: 5432, Schema: , Login: postgres, Password: ***, extra: {}
[2021-09-07 05:45:35,794] {dbapi.py:204} INFO - Running statement: 
            INSERT INTO users SELECT * FROM users_temp a WHERE NOT EXISTS (SELECT * FROM users b where a.id = b.id)
            INSERT INTO posts SELECT * FROM posts_temp a WHERE NOT EXISTS (SELECT * FROM posts b where a.id = b.id)
            DROP TABLE IF EXISTS users_temp;
            DROP TABLE IF EXISTS posts_temp;
        , parameters: None
[2021-09-07 05:45:35,948] {taskinstance.py:1462} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 1164, in _run_raw_task
    self._prepare_and_execute_task_with_callbacks(context, task)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 1282, in _prepare_and_execute_task_with_callbacks
    result = self._execute_task(context, task_copy)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 1312, in _execute_task
    result = task_copy.execute(context=context)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/postgres/operators/postgres.py", line 70, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/hooks/dbapi.py", line 184, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/hooks/dbapi.py", line 208, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "INSERT"
LINE 3:             INSERT INTO posts SELECT * FROM posts_temp a WHE...
                    ^

[2021-09-07 05:45:35,951] {taskinstance.py:1505} INFO - Marking task as FAILED. dag_id=json_etl_dag, task_id=create_temp_tables, execution_date=20210907T054527, start_date=20210907T054535, end_date=20210907T054535
[2021-09-07 05:45:35,974] {local_task_job.py:151} INFO - Task exited with return code 1
[2021-09-07 05:45:35,993] {local_task_job.py:261} INFO - 0 downstream tasks scheduled from follow-on schedule check
